force-app/main/default/objects/Legal_Advisor__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier for this Legal Advisor</description>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>