force-app/main/default/objects/Legal_Advisor__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Is this firm&apos;s account enabled or disabled?</description>
    <label>Account Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>