force-app/main/default/objects/Legal_Advisor__c/fields/Number_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clients__c</fullName>
    <description>How many Clients this Legal Advisor has</description>
    <label>Number of Clients</label>
    <summaryForeignKey>Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>